--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1243,6 +1243,11 @@ forces. For qutebrowser's extension API, the focus should lie on being as
 minimal and straightforward as possible, with the primary goal of moving
 internal qutebrowser code to extensions.
 
+While extensibility and completeness are valid concerns, they are less relevant
+as the API is not open to third-party extensions yet.
+
+\fixme{continue}
+
 
 % Umsetzungskonzept (des eigenen Lösungsansatzes)
 \chapter{Concept}
