Add meeting notes

--- a/meetings/2018-11-20.md
+++ b/meetings/2018-11-20.md
@@ -20,3 +20,11 @@
 - Next
   - API-Design weiter bearbeiten
   - mypy
+
+# Notizen
+
+- Bachelor-Arbeit zu zweit: wäre möglich
+- Flo fragt Stefan Richter wegen Details zur Fortsetzungsarbeit
+- Unten weniger Abstand auf Seiten
+- [QGIS Python API](https://qgis.org/pyqgis/3.4/)
+- Design-Kapitel: In Einleitung Y-Approach erwähnen, aber mit Anpassungen.
