--- a/doc/main.tex
+++ b/doc/main.tex
@@ -431,12 +431,6 @@ issue\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/30},
   accessed 2018-11-08}. However, the main aim of this project (and thus the main
 focus for the extension API) is reducing the complexity of qutebrowser's core.
 
-% System-Sequenzdiagramme
-\section{System Sequence Diagrams}
-\fixme{TODO}
-
-Rough idea: extension -> Proxy -> Tab API; link to chapters about proxy and tab API.
-
 % Weitere Funktionen, die nicht erfasst wurden
 %\section{Further Functionality}
 
@@ -1246,14 +1240,95 @@ internal qutebrowser code to extensions.
 While extensibility and completeness are valid concerns, they are less relevant
 as the API is not open to third-party extensions yet.
 
-\fixme{continue}
-
+\fixme{continue?}
 
 % Umsetzungskonzept (des eigenen Lösungsansatzes)
 \chapter{Concept}
 
 % Grobe Beschreibung des eigenen Lösungskonzepts
 \section{Summary}
+\fixme{}
+
+\section{Exposing existing APIs}
+Many of the APIs which should be exposed to extensions already exist in
+qutebrowser. However, exposing formerly private APIs carries certain risks:
+
+\begin{itemize}
+  \item Often, APIs do not undergo any review before they are made public
+    \citep[p.18f]{api-design}, This can lead to mistakes which were not regarded
+    as important (or not noticed at all) to be exposed publicly, without a way
+    to remedy the mistakes (since that would be an incompatible change).
+  \item Looking at the tab API explained in section \ref{tabapi}, some methods
+    exist because there was a need in the core part for them -- but they should
+    not be exposed to plugins, since they are only needed for very specialized
+    reasons.
+  \item When improving or refactoring APIs in the future, care must be taken
+    because third-party extensions might be affected by the change. To avoid
+    extension authors having to catch up with every upgrade of the core (and
+    frustrating users due to breaking extensions), any future changes should be
+    backwards-compatible, which greatly limits the room for future cleanups.
+  \item Even for methods which seem useful for an extension API, their need
+    should be carefully evaluated by looking at proposals for future extensions
+    before blindly exposing them. This approach leads to a smaller (and thus
+    simpler) API. It also increases the maintainability of the core, as parts
+    which aren't exposed can be freely changed without needing to take care of
+    extensions.
+\end{itemize}
+
+It must be noted that many of those issues are less relevant in the scope of
+this SA, as the API will be open to third-party extensions at a later point.
+However, care was taken to mitigate those issues where possible.
+
+In order to catch possible issues with existing APIs planning to be exposed to
+extensions, the existing APIs were reviewed by Raphael~Das~Gupta from the IFS
+(Institute for Software).
+
+It was considered to implement the object adapter pattern \citep[p.139]{gof} to
+limit the methods exposed in the API to what is actually necessary:
+
+\begin{figure}[h]
+\centering
+\begin{sequencediagram}
+  \newinst{extension}{:Extension}
+  \newinst{adapter}{:Adapter}
+  \newinst{tab}{:Tab}
+  \newinst{view}{:QWebEngineView}
+
+  \begin{call}{extension}{title()}{adapter}{``Title''}
+    \begin{call}{adapter}{title()}{tab}{``Title''}
+      \begin{call}{tab}{title()}{view}{``Title''}
+      \end{call}
+    \end{call}
+  \end{call}
+\end{sequencediagram}
+\caption{Sequence diagram for the extension API with adapter object}
+\end{figure}
+
+However, this would lead to a considerable amount of duplicated code: Big parts
+of the tab API would need to be duplicated, just to pass calls through. Since
+this solution provided an overhead which was considered too big compared to the
+benefits, the following alternatives were considered:
+
+\begin{itemize}
+  \item The methods could be marked private via the common Python convention to
+    start the name with an underscore (for example, \py{_shutdown()}).
+    However, in the core part, those should \emph{not} be private, as they need to
+    be used from outside the tab API.
+  \item The methods could be lacking a Python docstring, so they are accessible,
+    but excluded from the extension API documentation. However, auto-completion
+    in development environments would still suggest those methods, which could
+    lead to users thinking they are part of the exposed API. Additionally, this
+    would make it impossible to document the affected methods for developers
+    working on the core.
+  \item Similar to existing members like \verb|.scroller| or \verb|.zoom|, a new
+    \verb|.private_api| member could be introduced, which points to an object
+    containing any methods not part of the public API.
+\end{itemize}
+
+The last solution was chosen since it clearly communicates (both in the
+documentation and the name of the attribute) what part of the API is intended
+for usage in the core only. This solution also still allows the core to access
+those APIs, and the private API can still be documented properly.
 
 % z.T. Wiederholung im Groben, z.T. Verweise auf Teil II-Kapitel
 \section{Security}
@@ -1302,8 +1377,6 @@ them. This is for a variety of reasons:
     presents a trade-off between a user's freedom and security.
 \end{itemize}
 
-% 
-% 
 % % Design (Entwurf)
 % \chapter{Design}
 % 
