Improve page geometry
Fixes #4

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,parskip=full]{scrreprt}
+\documentclass[a4paper,parskip=full,twoside]{scrreprt}
 
 \usepackage[T1]{fontenc}
 \usepackage{cmbright}
@@ -19,6 +19,9 @@
 \usepackage{pgf-umlcd}
 \usepackage{pgf-umlsd}
 
+%\usepackage{showframe}
+\usepackage{geometry}
+%\geometry{top=2cm,bottom=2.5cm,includeheadfoot}
 \setlist{parsep=10pt}
 
 \newcommand{\py}[1]{\mintinline{python}{#1}}
