--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,5 +1,5 @@
 @Article{yapproach,
-  author = {Uwe Zdun and Huy Tran and Rafael Capilla and Olaf Zimmermann},
+  author = {Olaf Zimmermann and Uwe Zdun and Huy Tran and Rafael Capilla},
   title = {Sustainable Architectural Design Decisions},
   journal = {IEEE Software},
   year = {2014},
