--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1116,7 +1116,7 @@ The tab API is grouped into various classes:
   \end{class}
   \association{Tab}{}{}{TabData}{}{}
 \end{tikzpicture}
-\caption{Class diagram for tab API}
+\caption{Class diagram for tab API (all relations are 1:1)}
 \end{figure}
 
 With the exception of \verb|TabData| which is backend-agnostic, all those
