Turn off twoside

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,parskip=full,twoside]{scrreprt}
+\documentclass[a4paper,parskip=full]{scrreprt}
 
 \usepackage[T1]{fontenc}
 \usepackage{cmbright}
